oauth arbeit begonnen, basic alles fertig

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,8 @@ spring.h2.console.path=/h2-console/
 
 server.servlet.session.timeout=1m
 
+google.recaptcha.key.site=6Ldky_IfAAAAAN4SkgvRFzg21xeaxCLe2pSjQrU2
+google.recaptcha.key.secret=6Ldky_IfAAAAAA1NEdGC6zez5BarRXMJLyzohZb-
+
+spring.security.oauth2.client.registration.google.client-id=147689467432-n35qrem43e3e4or5kbksg2kcdi1du0uq.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
